1. 功能优化